# meridian-variance

./: .gitignore  GITHUB_SETUP.md  README.md  UMUT_PLAYBOOK.md  app.py  pyproject.toml  requirements.txt
data/input/: month_1_plant_a.csv  month_1_plant_b.csv  month_2_plant_a.csv  month_2_plant_b.csv  month_3_plant_a.csv  month_3_plant_b.csv  month_3_plant_c.csv  plant_a.csv  plant_b.csv
notebooks/: demo.ipynb
src/analysis/: __init__.py
src/analysis/config/: __init__.py  settings.py
src/analysis/inspect/: __init__.py  chat.py
src/analysis/run/: __init__.py  pipeline.py
src/analysis/utilities/: __init__.py  formatting.py
